Fix: DialogueBox exit animation overflow

--- a/src/app/projects/_components/DialogueBox.module.scss
+++ b/src/app/projects/_components/DialogueBox.module.scss
@@ -2,6 +2,7 @@
     border-radius: 22px;
     width: 80%;
     max-width: 1200px;
+    overflow: hidden;
     position: fixed;
     bottom: 2%;
     left: 50%;
